--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,13 @@ i, .mealCard {
 .recipes{
     color: #055160;
     background-color: #CFF4FC;
-    
-    
+}
+
+
+.inner-loading-screen{
+    position: absolute;
+    z-index: 9;
+    background-color: #0D0D0D;
+    display: flex;
+    left: 200px;
 }
